--- a/Machine Learning/svm.ipynb
+++ b/Machine Learning/svm.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14a7307f",
+   "id": "88983f55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ec154de",
+   "id": "db338208",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bba1d42e",
+   "id": "aa2e0221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e8fd4ec",
+   "id": "c181872a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +45,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dabd50dd",
+   "id": "4ad0ef32",
    "metadata": {},
    "source": [
-    "### What iris is?"
+    "### What iris is?\n",
+    "Bunch (like dict) with keys"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39857540",
+   "id": "6c2e6147",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28f84581",
+   "id": "8840458a",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "299d0603",
+   "id": "f6ca5dbc",
    "metadata": {},
    "outputs": [
     {
@@ -115,88 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "aa5b529e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".. _iris_dataset:\n",
-      "\n",
-      "Iris plants dataset\n",
-      "--------------------\n",
-      "\n",
-      "**Data Set Characteristics:**\n",
-      "\n",
-      "    :Number of Instances: 150 (50 in each of three classes)\n",
-      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
-      "    :Attribute Information:\n",
-      "        - sepal length in cm\n",
-      "        - sepal width in cm\n",
-      "        - petal length in cm\n",
-      "        - petal width in cm\n",
-      "        - class:\n",
-      "                - Iris-Setosa\n",
-      "                - Iris-Versicolour\n",
-      "                - Iris-Virginica\n",
-      "                \n",
-      "    :Summary Statistics:\n",
-      "\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "                    Min  Max   Mean    SD   Class Correlation\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
-      "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
-      "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
-      "    petal width:    0.1  2.5   1.20   0.76    0.9565  (high!)\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "    :Class Distribution: 33.3% for each of 3 classes.\n",
-      "    :Creator: R.A. Fisher\n",
-      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
-      "    :Date: July, 1988\n",
-      "\n",
-      "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
-      "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
-      "Machine Learning Repository, which has two wrong data points.\n",
-      "\n",
-      "This is perhaps the best known database to be found in the\n",
-      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
-      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
-      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
-      "latter are NOT linearly separable from each other.\n",
-      "\n",
-      ".. topic:: References\n",
-      "\n",
-      "   - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "     on Information Theory, May 1972, 431-433.\n",
-      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "     conceptual clustering system finds 3 classes in the data.\n",
-      "   - Many, many more ...\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(iris['DESCR'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
-   "id": "b7d5f360",
+   "id": "9f708eb7",
    "metadata": {},
    "outputs": [
     {
@@ -219,179 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b59b360b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5.1, 3.5, 1.4, 0.2],\n",
-       "       [4.9, 3. , 1.4, 0.2],\n",
-       "       [4.7, 3.2, 1.3, 0.2],\n",
-       "       [4.6, 3.1, 1.5, 0.2],\n",
-       "       [5. , 3.6, 1.4, 0.2],\n",
-       "       [5.4, 3.9, 1.7, 0.4],\n",
-       "       [4.6, 3.4, 1.4, 0.3],\n",
-       "       [5. , 3.4, 1.5, 0.2],\n",
-       "       [4.4, 2.9, 1.4, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.1],\n",
-       "       [5.4, 3.7, 1.5, 0.2],\n",
-       "       [4.8, 3.4, 1.6, 0.2],\n",
-       "       [4.8, 3. , 1.4, 0.1],\n",
-       "       [4.3, 3. , 1.1, 0.1],\n",
-       "       [5.8, 4. , 1.2, 0.2],\n",
-       "       [5.7, 4.4, 1.5, 0.4],\n",
-       "       [5.4, 3.9, 1.3, 0.4],\n",
-       "       [5.1, 3.5, 1.4, 0.3],\n",
-       "       [5.7, 3.8, 1.7, 0.3],\n",
-       "       [5.1, 3.8, 1.5, 0.3],\n",
-       "       [5.4, 3.4, 1.7, 0.2],\n",
-       "       [5.1, 3.7, 1.5, 0.4],\n",
-       "       [4.6, 3.6, 1. , 0.2],\n",
-       "       [5.1, 3.3, 1.7, 0.5],\n",
-       "       [4.8, 3.4, 1.9, 0.2],\n",
-       "       [5. , 3. , 1.6, 0.2],\n",
-       "       [5. , 3.4, 1.6, 0.4],\n",
-       "       [5.2, 3.5, 1.5, 0.2],\n",
-       "       [5.2, 3.4, 1.4, 0.2],\n",
-       "       [4.7, 3.2, 1.6, 0.2],\n",
-       "       [4.8, 3.1, 1.6, 0.2],\n",
-       "       [5.4, 3.4, 1.5, 0.4],\n",
-       "       [5.2, 4.1, 1.5, 0.1],\n",
-       "       [5.5, 4.2, 1.4, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.2],\n",
-       "       [5. , 3.2, 1.2, 0.2],\n",
-       "       [5.5, 3.5, 1.3, 0.2],\n",
-       "       [4.9, 3.6, 1.4, 0.1],\n",
-       "       [4.4, 3. , 1.3, 0.2],\n",
-       "       [5.1, 3.4, 1.5, 0.2],\n",
-       "       [5. , 3.5, 1.3, 0.3],\n",
-       "       [4.5, 2.3, 1.3, 0.3],\n",
-       "       [4.4, 3.2, 1.3, 0.2],\n",
-       "       [5. , 3.5, 1.6, 0.6],\n",
-       "       [5.1, 3.8, 1.9, 0.4],\n",
-       "       [4.8, 3. , 1.4, 0.3],\n",
-       "       [5.1, 3.8, 1.6, 0.2],\n",
-       "       [4.6, 3.2, 1.4, 0.2],\n",
-       "       [5.3, 3.7, 1.5, 0.2],\n",
-       "       [5. , 3.3, 1.4, 0.2],\n",
-       "       [7. , 3.2, 4.7, 1.4],\n",
-       "       [6.4, 3.2, 4.5, 1.5],\n",
-       "       [6.9, 3.1, 4.9, 1.5],\n",
-       "       [5.5, 2.3, 4. , 1.3],\n",
-       "       [6.5, 2.8, 4.6, 1.5],\n",
-       "       [5.7, 2.8, 4.5, 1.3],\n",
-       "       [6.3, 3.3, 4.7, 1.6],\n",
-       "       [4.9, 2.4, 3.3, 1. ],\n",
-       "       [6.6, 2.9, 4.6, 1.3],\n",
-       "       [5.2, 2.7, 3.9, 1.4],\n",
-       "       [5. , 2. , 3.5, 1. ],\n",
-       "       [5.9, 3. , 4.2, 1.5],\n",
-       "       [6. , 2.2, 4. , 1. ],\n",
-       "       [6.1, 2.9, 4.7, 1.4],\n",
-       "       [5.6, 2.9, 3.6, 1.3],\n",
-       "       [6.7, 3.1, 4.4, 1.4],\n",
-       "       [5.6, 3. , 4.5, 1.5],\n",
-       "       [5.8, 2.7, 4.1, 1. ],\n",
-       "       [6.2, 2.2, 4.5, 1.5],\n",
-       "       [5.6, 2.5, 3.9, 1.1],\n",
-       "       [5.9, 3.2, 4.8, 1.8],\n",
-       "       [6.1, 2.8, 4. , 1.3],\n",
-       "       [6.3, 2.5, 4.9, 1.5],\n",
-       "       [6.1, 2.8, 4.7, 1.2],\n",
-       "       [6.4, 2.9, 4.3, 1.3],\n",
-       "       [6.6, 3. , 4.4, 1.4],\n",
-       "       [6.8, 2.8, 4.8, 1.4],\n",
-       "       [6.7, 3. , 5. , 1.7],\n",
-       "       [6. , 2.9, 4.5, 1.5],\n",
-       "       [5.7, 2.6, 3.5, 1. ],\n",
-       "       [5.5, 2.4, 3.8, 1.1],\n",
-       "       [5.5, 2.4, 3.7, 1. ],\n",
-       "       [5.8, 2.7, 3.9, 1.2],\n",
-       "       [6. , 2.7, 5.1, 1.6],\n",
-       "       [5.4, 3. , 4.5, 1.5],\n",
-       "       [6. , 3.4, 4.5, 1.6],\n",
-       "       [6.7, 3.1, 4.7, 1.5],\n",
-       "       [6.3, 2.3, 4.4, 1.3],\n",
-       "       [5.6, 3. , 4.1, 1.3],\n",
-       "       [5.5, 2.5, 4. , 1.3],\n",
-       "       [5.5, 2.6, 4.4, 1.2],\n",
-       "       [6.1, 3. , 4.6, 1.4],\n",
-       "       [5.8, 2.6, 4. , 1.2],\n",
-       "       [5. , 2.3, 3.3, 1. ],\n",
-       "       [5.6, 2.7, 4.2, 1.3],\n",
-       "       [5.7, 3. , 4.2, 1.2],\n",
-       "       [5.7, 2.9, 4.2, 1.3],\n",
-       "       [6.2, 2.9, 4.3, 1.3],\n",
-       "       [5.1, 2.5, 3. , 1.1],\n",
-       "       [5.7, 2.8, 4.1, 1.3],\n",
-       "       [6.3, 3.3, 6. , 2.5],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [7.1, 3. , 5.9, 2.1],\n",
-       "       [6.3, 2.9, 5.6, 1.8],\n",
-       "       [6.5, 3. , 5.8, 2.2],\n",
-       "       [7.6, 3. , 6.6, 2.1],\n",
-       "       [4.9, 2.5, 4.5, 1.7],\n",
-       "       [7.3, 2.9, 6.3, 1.8],\n",
-       "       [6.7, 2.5, 5.8, 1.8],\n",
-       "       [7.2, 3.6, 6.1, 2.5],\n",
-       "       [6.5, 3.2, 5.1, 2. ],\n",
-       "       [6.4, 2.7, 5.3, 1.9],\n",
-       "       [6.8, 3. , 5.5, 2.1],\n",
-       "       [5.7, 2.5, 5. , 2. ],\n",
-       "       [5.8, 2.8, 5.1, 2.4],\n",
-       "       [6.4, 3.2, 5.3, 2.3],\n",
-       "       [6.5, 3. , 5.5, 1.8],\n",
-       "       [7.7, 3.8, 6.7, 2.2],\n",
-       "       [7.7, 2.6, 6.9, 2.3],\n",
-       "       [6. , 2.2, 5. , 1.5],\n",
-       "       [6.9, 3.2, 5.7, 2.3],\n",
-       "       [5.6, 2.8, 4.9, 2. ],\n",
-       "       [7.7, 2.8, 6.7, 2. ],\n",
-       "       [6.3, 2.7, 4.9, 1.8],\n",
-       "       [6.7, 3.3, 5.7, 2.1],\n",
-       "       [7.2, 3.2, 6. , 1.8],\n",
-       "       [6.2, 2.8, 4.8, 1.8],\n",
-       "       [6.1, 3. , 4.9, 1.8],\n",
-       "       [6.4, 2.8, 5.6, 2.1],\n",
-       "       [7.2, 3. , 5.8, 1.6],\n",
-       "       [7.4, 2.8, 6.1, 1.9],\n",
-       "       [7.9, 3.8, 6.4, 2. ],\n",
-       "       [6.4, 2.8, 5.6, 2.2],\n",
-       "       [6.3, 2.8, 5.1, 1.5],\n",
-       "       [6.1, 2.6, 5.6, 1.4],\n",
-       "       [7.7, 3. , 6.1, 2.3],\n",
-       "       [6.3, 3.4, 5.6, 2.4],\n",
-       "       [6.4, 3.1, 5.5, 1.8],\n",
-       "       [6. , 3. , 4.8, 1.8],\n",
-       "       [6.9, 3.1, 5.4, 2.1],\n",
-       "       [6.7, 3.1, 5.6, 2.4],\n",
-       "       [6.9, 3.1, 5.1, 2.3],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [6.8, 3.2, 5.9, 2.3],\n",
-       "       [6.7, 3.3, 5.7, 2.5],\n",
-       "       [6.7, 3. , 5.2, 2.3],\n",
-       "       [6.3, 2.5, 5. , 1.9],\n",
-       "       [6.5, 3. , 5.2, 2. ],\n",
-       "       [6.2, 3.4, 5.4, 2.3],\n",
-       "       [5.9, 3. , 5.1, 1.8]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iris['data']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "42848078",
-   "metadata": {},
+   "execution_count": 31,
+   "id": "ed772207",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -548,150 +302,20 @@
        "       [5.1, 1.8]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = iris['data'][:,(2,3)]\n",
-    "X"
+    "x = iris['data'][:,(2,3)]\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "fe6de23e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iris['target']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "8ce9717c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "150"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "2de8e956",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iris['target_names']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "f313e793",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iris['target']==2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "18432aa5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112,\n",
-       "        113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125,\n",
-       "        126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138,\n",
-       "        139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149], dtype=int64),)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(iris['target']==2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "fcecf8a1",
+   "execution_count": 28,
+   "id": "fe46f562",
    "metadata": {},
    "outputs": [
     {
@@ -708,46 +332,75 @@
        "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(iris[\"target\"] == 2).astype(np.float64)"
+    "y=(iris[\"target\"] == 2).astype(np.float64)\n",
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c678be3b",
+   "execution_count": 29,
+   "id": "2c6af565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_pipeline=Pipeline([('scaler', StandardScaler()),('linear_svc',LinearSVC(C=1,loss='hinge'))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2e200d35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int64)"
+       "Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                ('linear_svc', LinearSVC(C=1, loss='hinge'))])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(iris['target']==2).astype(np.int64)"
+    "# fit model\n",
+    "my_pipeline.fit(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ea97bb56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# predict\n",
+    "my_pipeline.predict([[1,5]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8303f25c",
+   "id": "6442ab1b",
    "metadata": {},
    "outputs": [],
    "source": []
